# environment_predictor

./: CMakeLists.txt  README.md
Matlab/: UADgetData.m  UADplotPicPoints.m  UDAmapToPicture.m  filter_tester.asv  filter_tester.m  getPointsFromState.asv  getPointsFromState_old.m  handle_measurements.asv  import_sample_data.m  kalman_filter.m  kalman_filter_lr.asv  kalman_filter_lr.m  kalman_filter_lr.prj  kalman_filter_middle.m  plot_data.m  projectPoints_new.m  state_transition_test.asv  state_transition_test.m  test_ccode.prj
Matlab/codegen/lib/kalman_filter_lr/: buildInfo.mat  codeInfo.mat  colon.cpp  colon.h  d_line_point.cpp  d_line_point.h  eye.cpp  eye.h  getPointsFromState.cpp  getPointsFromState.h  guiReport.mat  handle_measurements.cpp  handle_measurements.h  kalman_filter_lr.cpp  kalman_filter_lr.h  kalman_filter_lr_emxAPI.cpp  kalman_filter_lr_emxAPI.h  kalman_filter_lr_emxutil.cpp  kalman_filter_lr_emxutil.h  kalman_filter_lr_initialize.cpp  kalman_filter_lr_initialize.h  kalman_filter_lr_rtw.mk  kalman_filter_lr_terminate.cpp  kalman_filter_lr_terminate.h  kalman_filter_lr_types.h  lusolve.cpp  lusolve.h  messmatrix.cpp  messmatrix.h  mrdivide.cpp  mrdivide.h  projectPoints.cpp  projectPoints.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h  (+8 more)
Matlab/codegen/lib/kalman_filter_lr/examples/: main.cpp  main.h
Matlab/codegen/lib/kalman_filter_lr/html/: colon_cpp.html  colon_h.html  contents_file.tmp  d_line_point66_mcode.html  (+59 more)
include/: environment_predictor.h
src/: environment_predictor.cpp  interface.cpp
(+6 files in other folders)
